fix grammar + overflow bug

--- a/css/layout.css
+++ b/css/layout.css
@@ -11,7 +11,6 @@
 
 html,
 body {
-	overflow-x:hidden;
 	margin:0;
 	padding:0;
 	height:95%;
